# time-series-ml-project

./: .gitignore  README.md  folder_structure.txt  main.py  pyproject.toml
api_deployment/: api.py
api_deployment/temporal_model/: column_labels.txt  complete_predictions.csv  error_matrix.csv  lambd.txt  summing_matrix.csv
data/: cleaned_adjusted_store1.csv  cleaned_adjusted_store2.csv  cleaned_store1.csv  cleaned_store2.csv  store1.csv  store2.csv
data/features/: niedersachsen_holidays.csv  semester_dates.csv
experiments/: README.md  eval_run.py  main.py  prepare_data.py
experiments/configs/: adding_missing_config.yaml  experiment_config.yaml  model_hyperparameter_config.yaml  multi_vs_single_config.yaml
experiments/evaluation/: experiments.md
experiments/hierarchical_forecast/: create_hierarchical_data.py  hierarchical.py  hierarchical_reconciliation.py
experiments/hierarchical_forecast/category_model/: column_labels.txt  complete_predictions.csv  error_matrix.csv  lambd.txt  levels.txt  summing_matrix.csv
models/: Finalprophet.py  baseline_mlflow.py  baslineprophet.py  train_prophet.py
preprocessing/: clean_data.py  generate_missing_sales.py  generate_missing_sales_data.py
src/demandprediction/: config.py
src/demandprediction/models/: prophet_model.py  xgb_model.py
src/demandprediction/models/reconciliation_hts/: __init__.py  reconciliation.py
src/demandprediction/models/reconciliation_hts/Test/: test_reconciliation.py
src/demandprediction/preprocessing/: calendar_features.py
visualizations/: visualization.py
